Firefox 96.0.2 / Fix for tab overflow mode

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -482,9 +482,10 @@
 
 /* ---------- Shadow DOM ---------- */
 
-#tabbrowser-arrowscrollbox
+#tabbrowser-arrowscrollbox[overflowing]
 {
     --margin-top: var(--drag-space) !important;
+    --toolbarbutton-inner-padding: 0px !important;
 }
 
 #scrollbutton-up,
@@ -580,6 +581,16 @@ spacer[part="overflow-end-indicator"]
     .tabbrowser-tab::after
     {
         width: 0.5px !important;
+    }
+}
+
+/* ---------------------------------------- Compact Mode Plus ---------------------------------------- */
+
+@supports -moz-bool-pref("Style.Compact-Plus")
+{
+    :root[uidensity="compact"]
+    {
+        --tab-min-height: 28px !important;
     }
 }
 
